Fix slideshow height on mobile. Template minimal

--- a/Minimal/css/style.less
+++ b/Minimal/css/style.less
@@ -737,6 +737,7 @@ h2, h3, h4, h5, h6 {
 
 		img {
 			border-radius: @border-radius;
+            width: 100%;
 		}
 
 		.promo {
@@ -754,13 +755,13 @@ h2, h3, h4, h5, h6 {
 
 		.product-info {
 			.transition(opacity 1s ease);
-			.opacity(0);
 			.background-color(#fff, 90%);
-			position: absolute;
+			position: relative;
 			right: 0;
 			bottom: 0;
 			left: 0;
 			top: 0;
+            margin-top: @padding/3;
 			text-align: center;
 			padding: 0 @padding;
 			z-index: 2;
@@ -1693,6 +1694,10 @@ form footer {
 
 	.slideshow.slideshow-home {
 		display: block;
+
+		.slide, .slides {
+			height: 189px;
+		}
 	}
 
 	.page-home .products {
@@ -1718,6 +1723,23 @@ form footer {
 			}
 		}
 	}
+
+     .products {
+        .product {
+            img {
+                width: auto;
+            }
+            .product-info {
+                .opacity(0);
+                position: absolute;
+                margin-top: 0;
+
+                &:hover {
+                    .opacity(1);
+                }
+            }
+        }
+    }
 }
 
 //md
@@ -1746,6 +1768,13 @@ form footer {
 		.btn-zoom {
 			display: block;
 		}
+
+		&.slideshow-home {
+		
+			.slide, .slides {
+				height: 247px;
+			}
+		}
 	}
 
 	.btn-lang {
@@ -1767,6 +1796,14 @@ form footer {
 	.page-category {
 		h1 {
 			font-size: 30px;
+		}
+	}
+
+	.slideshow {
+		&.slideshow-home {
+			.slide, .slides {
+				height: 300px;
+			}
 		}
 	}
 }
